--- a/style.css
+++ b/style.css
@@ -15,3 +15,14 @@ Tags: one-column, custom-colors, custom-menu, custom-logo, editor-style, feature
 wp-dev, (C) 2023 André Melo
 wp-dev é distribuído nos termos da GNU GPL.
 */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Alice', serif;
+    font-family: 'Urbanist', sans-serif;
+}
+
